        $TEST_FILESTORAGE environment variable to a custom Data.fs file.  A 
        ZEO server can be configured using the $TEST_ZEO_HOST and 
        $TEST_ZEO_PORT environment variables. This new functionality allows us
        to use the standard Zope testrunner for writing and running tests
        against existing Zope installations.

    Bugs fixed

      - LP #360761 (backported from Acquisition trunk): fix iteration proxy
        to pass `self` acquisition-wrapped into `__iter__` and `__getitem__`.

      - LP #414757 (backported from Zope trunk): don't emit a IEndRequestEvent
        when clearing a cloned request.

  Zope 2.10.9 (2009/08/06)

    Restructuring

      - Moved exception MountedStorageError from ZODB.POSExceptions
        to Products.TemporaryFolder.mount (now its only client).

      - LP #253362:  Moved Zope2-specific module, ZODB/Mount.py, to
        Products/TemporaryFolder/mount.py (its only client is
        Products/TemporaryFolder/TemporaryFolder.py).

      - Removed spurious import-time dependencies from
        Products/ZODBMountPoint/MountedObject.py.

    Bugs fixed

      - Fixed vulnerabilities in the ZEO network protocol 
        affecting ZEO storage servers.

  Zope 2.10.8 (2009/05/04)

    Features added

      - SiteErrorLog now includes the entry id in the information copied to
        the event log. This allowes you to correlate a user error report with
        the event log after a restart, or let's you find the REQUEST
        information in the SiteErrorLog when looking at a traceback in the
        event log.

    Restructuring

      - Added 'InitializeClass' alias in 'App.class_init' to ease migration.
        In Zope 2.12 it will be recommended to import 'InitializeClass' from
        'App.class_init' instead of 'Globals'.

      - Moved 'ApplicationDefaultPermissions' from 'App.class_init' to
        'AccessControl.Permissions', in order to break an import cycle